@@ -29,11 +29,11 @@ public final class LearningTableValuesFactory {
         final String className = getClassName(protocol);
         try {
             final Class<?> cls = Class.forName(className);
-            return (LearningTableValues) cls.newInstance();
+            return (LearningTableValues) cls.getDeclaredConstructor().newInstance();
         } catch (Exception e) {
             throw new UnsupportedProtocolException(String.format(
                     "LearningTableValues class for %s not found: %s",
-                    protocol, className));
+                    protocol, className), e);
         }
     }
 
